tests/error/comptime/check_dereference10.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function foo(t: [int32]) -> *int32
{
	return &t[0];
}

function test()
{
	(consteval {
		*foo([ 0 ]);
	});
}
